Early pokedex implementation and bulk Sprite and Pokemon gets WIP

--- a/PokeUi/Pages/Pokemon.cshtml
+++ b/PokeUi/Pages/Pokemon.cshtml
@@ -8,3 +8,14 @@
 <h2>
     <img src="@Model.ImageUrl" />
 </h2>
+<table>
+    @foreach (var pokemon in Model.PokedexDic)
+    {
+        <tr>
+            <td>@pokemon.Key</td>
+            <td>
+                <img src="@pokemon.Value"/>
+            </td>
+        </tr>
+    }
+</table>
